-- vim:tw=132
Name:                biohazard
Version:             0.5.14
Synopsis:            bioinformatics support library
Description:         This is a collection of modules I separated from
                     various bioinformatics tools.  The hope is to make
                     them reusable and easier to maintain.  Also includes
                     some of these tools and a bunch that work on mitochondrial 
                     sequences.
Category:            Bioinformatics

Homepage:            http://github.com/udo-stenzel/biohazard
License:             BSD3
License-File:        LICENSE

Author:              Udo Stenzel
Maintainer:          udo.stenzel@eva.mpg.de
Copyright:           (C) 2010-2014 Udo Stenzel

-- Extra files to be distributed with the package, such as examples or a README.
Extra-Source-Files:  man/man7/biohazard.7
                     man/man1/bam-meld.1
                     man/man1/bam-rewrap.1
                     man/man1/bam-rmdup.1
                     man/man1/mt-anno.1
                     doc/genotyping.tex

Cabal-version:       >=1.9.2
Build-type:          Custom

source-repository head
  type:     git
  location: git://github.com/udo-stenzel/biohazard.git

source-repository this
  type:     git
  location: git://github.com/udo-stenzel/biohazard.git
  tag:      0.5.14


Library
  -- Modules exported by the library.
  Exposed-modules:     Bio.Base,
                       Bio.Align,
                       Bio.Bam,
                       Bio.Bam.Fastq,
                       Bio.Bam.Filter,
                       Bio.Bam.Header,
                       Bio.Bam.Index,
                       Bio.Bam.Pileup, 
                       Bio.Bam.Raw,
                       Bio.Bam.Regions,
                       Bio.Bam.Rec,
                       Bio.Bam.Rmdup,
                       Bio.Bam.Trim,
                       Bio.Genocall,
                       Bio.Genocall.Adna,
                       Bio.Genocall.AvroFile,
                       Bio.Glf,
                       Bio.Iteratee,
                       Bio.Iteratee.Bgzf,
                       Bio.Iteratee.ZLib,
                       Bio.PriorityQueue,
                       Bio.TwoBit,
                       Bio.Util,
                       Data.Avro
  
  -- Packages needed in order to build this package.
  Build-depends:       aeson >= 0.7 && < 0.9,
                       array >= 0.4 && < 0.6,
                       async == 2.0.*,
                       attoparsec >= 0.10 && < 0.13,
                       base == 4.*, 
                       binary >= 0.5 && < 0.8,
                       bytestring >= 0.9 && < 0.11, 
                       bytestring-mmap == 0.2.*,
                       containers >= 0.4 && < 0.6,
                       directory == 1.2.*,
                       exceptions == 0.6.*,
                       filepath == 1.3.*,
                       iteratee >= 0.8.9.6 && < 0.8.10,
                       ListLike >= 3 && <5,
                       primitive == 0.5.*,
                       random == 1.0.*,
                       scientific == 0.3.*,
                       stm == 2.4.*,
                       template-haskell == 2.*,
                       text == 1.*,
                       transformers >= 0.3 && < 0.5,
                       unordered-containers == 0.2.*,
                       Vec == 1.*,
                       vector >= 0.9 && < 0.11,
                       vector-algorithms == 0.6.*,
                       vector-th-unbox,
                       zlib == 0.5.*
  
  Ghc-options:         -Wall -auto-all
  Hs-source-dirs:      src
  Include-dirs:        src/cbits
  C-sources:           src/cbits/myers_align.c
  CC-options:          -fPIC

  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  

-- Test-Suite test-biohazard
  -- Ghc-options:         -Wall -auto-all -threaded -rtsopts
  -- Type:                exitcode-stdio-1.0
  -- Main-is:             test-biohazard.hs

Executable afroengineer
  Main-Is:             afroengineer.hs
  Hs-source-dirs:      tools
  Other-Modules:       Align, SimpleSeed
  Build-Depends:       base == 4.*,
                       array,
                       biohazard,
                       bytestring,
                       containers >= 0.4.1 && < 0.6,
                       directory == 1.*,
                       iteratee >= 0.8.9.6 && < 0.8.10,
                       unordered-containers == 0.2.*,
                       vector >= 0.9 && < 0.11

Executable bam-fixpair
  Main-is:             bam-fixpair.hs
  Hs-Source-Dirs:      tools
  Build-depends:       base == 4.*,
                       binary >= 0.5 && < 0.8,
                       biohazard,
                       bytestring,
                       hashable >= 1.0 && < 1.3,
                       transformers >= 0.3 && < 0.5

Executable bam-meld
  Main-is:             bam-meld.hs
  Hs-Source-Dirs:      tools
  Build-depends:       base == 4.*,
                       biohazard,
                       bytestring,
                       containers >= 0.4 && < 0.6
  
Executable bam-resample
  Main-is:             bam-resample.hs
  Hs-Source-Dirs:      tools
  Build-depends:       base == 4.*,
                       biohazard,
                       bytestring,
                       random == 1.0.*

Executable bam-rewrap
  Main-is:             bam-rewrap.hs
  Hs-Source-Dirs:      tools
  Build-depends:       base == 4.*,
                       biohazard,
                       bytestring,
                       containers >= 0.4 && < 0.6

Executable bam-rmdup
  Main-is:             bam-rmdup.hs
  Hs-Source-Dirs:      tools
  Build-depends:       base == 4.*,
                       biohazard,
                       bytestring,
                       containers >= 0.4 && < 0.6,
                       iteratee >= 0.8.9.6 && < 0.8.10,
                       unordered-containers >= 0.2.3 && < 0.3,
                       vector >= 0.9 && < 0.11,
                       vector-algorithms >= 0.3

Executable bam-trim
  Main-is:             bam-trim.hs
  Hs-Source-Dirs:      tools
  Build-depends:       base == 4.*,
                       biohazard,
                       bytestring
  
Executable count-coverage
  Main-is:             count-coverage.hs
  Hs-Source-Dirs:      tools
  Build-depends:       base == 4.*,
                       biohazard,
                       iteratee >= 0.8.9.6 && < 0.8.10

Executable dmg-est
  Main-is:             dmg-est.hs
  Hs-Source-Dirs:      tools
  Build-depends:       base == 4.*,
                       ad == 4.*,
                       biohazard,
                       Vec,
                       vector >= 0.9 && < 0.11,
                       vector-th-unbox,
                       nonlinear-optimization, 
                       time

Executable fastq2bam
  Main-is:             fastq2bam.hs
  Hs-Source-Dirs:      tools
  Build-depends:       base == 4.*,
                       biohazard,
                       bytestring,
                       containers >= 0.4 && < 0.6,
                       iteratee >= 0.8.9.6 && < 0.8.10,
                       vector >= 0.9 && < 0.11

Executable glf-consensus
  Main-is:             glf-consensus.hs
  Hs-Source-Dirs:      tools
  Build-depends:       base == 4.*,
                       biohazard,
                       bytestring,
                       containers >= 0.4 && < 0.6,
                       exceptions == 0.6.*,
                       iteratee >= 0.8.9.6 && < 0.8.10

Executable gt-call
  Main-is:             gt-call.hs
  Hs-Source-Dirs:      tools
  Build-depends:       base == 4.*,
                       biohazard,
                       bytestring,
                       -- containers >= 0.4 && < 0.6,
                       iteratee >= 0.8.9.6 && < 0.8.10,
                       text == 1.*,
                       vector >= 0.9 && < 0.11

Executable mt-anno
  Main-Is:             mt-anno.hs
  Hs-Source-Dirs:      tools
  Other-Modules:       Anno, Seqs, Xlate
  Build-Depends:       base == 4.*,
                       bytestring,
                       biohazard,
                       containers >= 0.4.1 && < 0.6

Executable mt-ccheck
  Main-Is:             mt-ccheck.hs
  Hs-Source-Dirs:      tools
  Build-Depends:       base == 4.*,
                       bytestring,
                       biohazard,
                       containers >= 0.4.1 && < 0.6,
                       unordered-containers == 0.2.*

executable wiggle-coverage
  Main-is:             wiggle-coverage.hs
  Hs-Source-Dirs:      tools
  Build-depends:       base == 4.*,
                       biohazard

-- vim:tw=132
