-- vim:tw=132
Name:                biohazard-tools
Version:             0.5.4
Synopsis:            tools separated from biohazard
-- Description:
Category:            Bioinformatics

Homepage:            http://github.com/udo-stenzel/biohazard
License:             BSD3
License-File:        LICENSE

Author:              Udo Stenzel
Maintainer:          udo.stenzel@eva.mpg.de
Copyright:           (C) 2010 Udo Stenzel

-- Extra files to be distributed with the package, such as examples or a README.
Extra-Source-Files:  man/man1/bam-meld.1
                     man/man1/bam-rewrap.1
                     man/man1/bam-rmdup.1

Cabal-version:       >=1.9.2
Build-type:          Custom

source-repository head
  type:     git
  location: git://github.com/udo-stenzel/biohazard.git

source-repository this
  type:     git
  location: git://github.com/udo-stenzel/biohazard.git
  tag:      0.5.4

Executable bam-fixpair
  Ghc-options:         -Wall -auto-all -threaded -rtsopts
  Main-is:             bam-fixpair.hs
  Build-depends:       base ==4.*, binary, biohazard ==0.5.4, bytestring, hashable, transformers

Executable bam-meld
  Ghc-options:         -Wall -auto-all -threaded -rtsopts
  Main-is:             bam-meld.hs
  Build-depends:       base ==4.*, biohazard, bytestring, containers
  
Executable bam-resample
  Ghc-options:         -Wall -auto-all -threaded -rtsopts
  Main-is:             bam-resample.hs
  Build-depends:       base ==4.*, biohazard ==0.5.4, bytestring, random

Executable bam-rewrap
  Ghc-options:         -Wall -auto-all -threaded -rtsopts
  Main-is:             bam-rewrap.hs
  Build-depends:       base ==4.*, biohazard ==0.5.4, bytestring, containers

Executable bam-rmdup
  Ghc-options:         -Wall -auto-all -threaded -rtsopts
  Main-is:             bam-rmdup.hs
  Build-depends:       base ==4.*, biohazard ==0.5.4, bytestring, containers, iteratee == 0.8.9.*

Executable bam-trim
  Ghc-options:         -Wall -auto-all -threaded -rtsopts
  Main-is:             bam-trim.hs
  Build-depends:       base ==4.*, biohazard ==0.5.4, bytestring
  
Executable count-coverage
  Ghc-options:         -Wall -auto-all -threaded -rtsopts
  Main-is:             count-coverage.hs
  Build-depends:       base ==4.*, biohazard ==0.5.4, iteratee == 0.8.9.*

Executable glf-consensus
  Ghc-options:         -Wall -auto-all -threaded -rtsopts
  Main-is:             glf-consensus.hs
  Build-depends:       base ==4.*, biohazard ==0.5.4, bytestring, containers, iteratee == 0.8.9.*, MonadCatchIO-transformers

Executable wiggle-coverage
  Ghc-options:         -Wall -auto-all -threaded -rtsopts
  Main-is:             wiggle-coverage.hs
  Build-depends:       base ==4.*, biohazard ==0.5.4

-- vim:tw=132
