-- vim:tw=132
Name:                biohazard-tools
Version:             0.5.6
Synopsis:            tools separated from biohazard
-- Description:
Category:            Bioinformatics

Homepage:            http://github.com/udo-stenzel/biohazard
License:             BSD3
License-File:        LICENSE

Author:              Udo Stenzel
Maintainer:          udo.stenzel@eva.mpg.de
Copyright:           (C) 2010 Udo Stenzel

-- Extra files to be distributed with the package, such as examples or a README.
Extra-Source-Files:  man/man1/bam-meld.1
                     man/man1/bam-rewrap.1
                     man/man1/bam-rmdup.1

Cabal-version:       >=1.9.2
Build-type:          Custom

source-repository head
  type:     git
  location: git://github.com/udo-stenzel/biohazard.git

source-repository this
  type:     git
  location: git://github.com/udo-stenzel/biohazard.git
  tag:      0.5.6

Executable bam-fixpair
  Main-is:             bam-fixpair.hs
  Build-depends:       base == 4.*,
                       binary >= 0.5 && < 0.8,
                       biohazard == 0.5.6,
                       bytestring >= 0.9 && < 0.11,
                       hashable >= 1.0 && < 1.3,
                       transformers == 0.3.*

Executable bam-meld
  Main-is:             bam-meld.hs
  Build-depends:       base == 4.*,
                       biohazard == 0.5.6,
                       bytestring >= 0.9 && < 0.11,
                       containers >= 0.4 && < 0.6
  
Executable bam-resample
  Main-is:             bam-resample.hs
  Build-depends:       base == 4.*,
                       biohazard == 0.5.6,
                       bytestring >= 0.9 && < 0.11,
                       random == 1.0.*

Executable bam-rewrap
  Main-is:             bam-rewrap.hs
  Build-depends:       base == 4.*,
                       biohazard == 0.5.6,
                       bytestring >= 0.9 && < 0.11,
                       containers >= 0.4 && < 0.6

Executable bam-rmdup
  Main-is:             bam-rmdup.hs
  Build-depends:       base == 4.*,
                       biohazard == 0.5.6,
                       bytestring >= 0.9 && < 0.11,
                       containers >= 0.4 && < 0.6,
                       iteratee == 0.8.9.*,
                       unordered-containers >= 0.2.3 && < 0.3,
                       vector == 0.10.*,
                       vector-algorithms >= 0.3

Executable bam-trim
  Main-is:             bam-trim.hs
  Build-depends:       base == 4.*,
                       biohazard == 0.5.6,
                       bytestring >= 0.9 && < 0.11
  
Executable count-coverage
  Main-is:             count-coverage.hs
  Build-depends:       base == 4.*,
                       biohazard == 0.5.6,
                       iteratee == 0.8.9.*

Executable glf-consensus
  Main-is:             glf-consensus.hs
  Build-depends:       base == 4.*,
                       biohazard == 0.5.6,
                       bytestring >= 0.9 && < 0.11,
                       containers >= 0.4 && < 0.6,
                       iteratee == 0.8.9.*,
                       MonadCatchIO-transformers == 0.3.*

Executable wiggle-coverage
  Main-is:             wiggle-coverage.hs
  Build-depends:       base == 4.*,
                       biohazard == 0.5.6

-- vim:tw=132
