-- vim:tw=132
Name:                biohazard
Version:             0.5.5
Synopsis:            bioinformatics support library
Description:         This is a collection of modules I separated from
                     various bioinformatics tools.  The hope is to make
                     them reusable and easier to maintain.
Category:            Bioinformatics

Homepage:            http://github.com/udo-stenzel/biohazard
License:             BSD3
License-File:        LICENSE

Author:              Udo Stenzel
Maintainer:          udo.stenzel@eva.mpg.de
Copyright:           (C) 2010 Udo Stenzel

-- Extra files to be distributed with the package, such as examples or a README.
Extra-Source-Files:  man/man7/biohazard.7

Cabal-version:       >=1.9.2
Build-type:          Custom

source-repository head
  type:     git
  location: git://github.com/udo-stenzel/biohazard.git

source-repository this
  type:     git
  location: git://github.com/udo-stenzel/biohazard.git
  tag:      0.5.5


Library
  -- Modules exported by the library.
  Exposed-modules:     Bio.Base,
                       Bio.Align,
                       Bio.Bam,
                       Bio.Bam.Fastq,
                       Bio.Bam.Filter,
                       Bio.Bam.Header,
                       Bio.Bam.Pileup, 
                       Bio.Bam.Raw,
                       Bio.Bam.Rec,
                       Bio.Bam.Rmdup,
                       Bio.Bam.Trim,
                       Bio.Glf,
                       Bio.Iteratee,
                       Bio.Iteratee.ZLib,
                       Bio.PriorityQueue,
                       Bio.TwoBit,
                       Bio.Util,
                       Codec.Bgzf
  
  -- Packages needed in order to build this package.
  Build-depends:       array == 0.4.*,
                       attoparsec == 0.10.*, 
                       attoparsec-iteratee == 0.4.*, 
                       base == 4.*, 
                       binary == 0.5.*, 
                       binary-strict == 0.4.*, 
                       bytestring >= 0.9 && < 0.11, 
                       containers >= 0.4 && < 0.6,
                       directory == 1.2.*,
                       filepath == 1.3.*,
                       iteratee == 0.8.9.*,
                       ListLike == 3.*,
                       MonadCatchIO-transformers == 0.3.*,
                       -- parallel,
                       random == 1.0.*,
                       transformers == 0.3.*,
                       vector >= 0.9 && < 0.11,
                       zlib == 0.5.*
  
  Ghc-options:         -Wall -auto-all
  Include-dirs:        cbits
  C-sources:           cbits/myers_align.c

  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  

-- Test-Suite test-biohazard
  -- Ghc-options:         -Wall -auto-all -threaded -rtsopts
  -- Type:                exitcode-stdio-1.0
  -- Main-is:             test-biohazard.hs

