-- vim:tw=132
Name:                mt-tools
Version:             0.5.10
Synopsis:            tools that work on mitochondrial sequences
Category:            Bioinformatics
Homepage:            http://github.com/udo-stenzel/biohazard
License:             BSD3
License-File:        LICENSE
Author:              Udo Stenzel
Maintainer:          udo.stenzel@eva.mpg.de
Copyright:           (C) 2014 Udo Stenzel

-- Extra files to be distributed with the package, such as examples or a README.
Extra-Source-Files:  man/man1/mt-anno.1

Cabal-Version:       >=1.8
Build-Type:          Custom

executable afroengineer
  Main-Is:             afroengineer.hs
  Other-Modules:       Align, SimpleSeed
  Build-Depends:       base == 4.*,
                       array == 0.4.*,
                       biohazard == 0.5.10,
                       bytestring >= 0.9 && < 0.11,
                       containers >= 0.4.1 && < 0.6,
                       directory == 1.*,
                       iteratee >= 0.8.9.6 && < 0.8.10,
                       unordered-containers == 0.2.*,
                       vector >= 0.9 && < 0.11

executable mt-anno
  Main-Is:             mt-anno.hs
  Other-Modules:       Anno, Seqs, Xlate
  Build-Depends:       base == 4.*,
                       bytestring >= 0.9 && < 0.11,
                       biohazard == 0.5.10,
                       containers >= 0.4.1 && < 0.6

executable mt-ccheck
  Main-Is:             mt-ccheck.hs
  Build-Depends:       base == 4.*,
                       bytestring >= 0.9 && < 0.11,
                       biohazard == 0.5.10,
                       containers >= 0.4.1 && < 0.6,
                       unordered-containers == 0.2.*

